# major-system-fltk

./: README.md
src/: CMakeCache.txt  CMakeLists.txt  MajorHelper  ipa-dict-en_UK.txt  major_helper.cxx  phonetics.h  wordlists.h
